--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="footer__bottom">
-            <p>&copy; 2024 Караван ГТА. Всі права захищені.</p>
+            <p>&copy; 2024 Караван ГТА. Всі права захищені. Створено discord: mr_seater </p>
             <nav class="footer__nav">
                 <a href="/privacy-policy" class="footer__link">Політика конфіденційності</a>
                 <a href="/terms-of-service" class="footer__link">Умови використання</a>
