--- a/index.html
+++ b/index.html
@@ -157,6 +157,137 @@
         </div>
     </section>
     <section class="why">
+    <div class="why__text-decor two">
+        u
+    </div>
+    <div class="why__container">
+        <div class="why__title-wrap">
+            <h2 class="title why__title">
+                <span class="title__decor">Чому потрібно грати в caravan gta? </span> Чому потрібно грати в <span class="yellow">caravan gta</span>?
+            </h2>
+        </div>
+        <div class="why__items">
+            <div data-prlx-parent class="why__item item-why">
+                <div class="item-why__gerb">
+                    <img data-prlx src="gerb.svg" alt>
+                </div>
+                <div class="item-why__content wow slideInLeft">
+                    <div class="item-why__digit">01</div>
+                    <div class="item-why__wrap-content">
+                        <h4 class="item-why__title">
+                            <span class="blue">УКРАЇ</span><span class="yellow">НСЬКА</span> МАПА В ГРІ!
+                        </h4>
+                        <div class="item-why__text">
+                            <p>Ми працюємо над картою вже майже рік. Зайшовши в гру ти одразу зрозумієш, що ти знаходишся в Україні. У грі доступні такі міста як: Харків, Дніпро, Гостомель, Полтава, Чорнобиль і розробляється Київ. Ти почуєш всю атмосферу України з перших секунд як побачиш АТБ, Нову Пошту і купу інших українських компаній!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-why__image-wrap wow slideInRight">
+                    <div class="item-why__decor-block"></div>
+                    <div class="item-why__decor-block _2"></div>
+                    <div class="item-why__line-decor"></div>
+                    <picture>
+                        <source srcset="01.webp, 01@2x.webp 2x" type="image/webp">
+                        <img srcset="01@2x.png 2x" src="01.png" alt>
+                    </picture>
+                </div>
+            </div>
+            <div class="why__item item-why">
+                <div class="item-why__content wow slideInRight">
+                    <div class="item-why__digit">02</div>
+                    <div class="item-why__wrap-content">
+                        <h4 class="item-why__title">РЕАЛЬНІ РОБОТИ ТА ПРОФЕСІЇ</h4>
+                        <div class="item-why__text">
+                            <p>Ти можеш стати будь-ким, працювати далекобійником АТБ або <span class="red">Нової Пошти</span>. Можеш присікати бандитів, працюючи в Національній Поліції або піти служити в ЗСУ. У тебе буде величезний вибір як робот-початківців, так і серйозних професій таких як: ДСНС, СБУ.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-why__image-wrap wow slideInLeft">
+                    <div class="item-why__decor-block"></div>
+                    <div class="item-why__decor-block _2"></div>
+                    <div class="item-why__line-decor"></div>
+                    <picture>
+                        <source srcset="02.webp, 02@2x.webp 2x" type="image/webp">
+                        <img srcset="02@2x.png 2x" src="02.png" alt>
+                    </picture>
+                </div>
+            </div>
+            <div class="why__item item-why">
+                <div class="item-why__content wow slideInLeft">
+                    <div class="item-why__digit">03</div>
+                    <div class="item-why__wrap-content">
+                        <h4 class="item-why__title">Вітчизняні та імпортні автомобілі</h4>
+                        <div class="item-why__text">
+                            <p>Ми додали понад 400 моделей автомобілів. У грі ти знайдеш будь-який автомобіль, від вітчизняних українських автомобілів: ЗАЗ, КрАЗ, ЛАЗ до високоякісних європейських, японських та американських. Після покупки авто тобі теж буде чим зайнятися, тому що будь-який автомобіль у грі можна затюнінгувати, ти можеш купити нові диски, затонувати і навіть змінювати характеристики двигуна.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-why__image-wrap wow slideInRight">
+                    <div class="item-why__decor-block"></div>
+                    <div class="item-why__decor-block _2"></div>
+                    <div class="item-why__line-decor"></div>
+                    <picture>
+                        <source srcset="03_1.webp, 03@2x.webp 2x" type="image/webp">
+                        <img srcset="03@2x.png 2x" src="03.png" alt>
+                    </picture>
+                </div>
+            </div>
+            <div data-prlx-parent class="why__item item-why">
+                <div class="item-why__gerb">
+                    <img data-prlx src="gerb.svg" alt>
+                </div>
+                <div class="item-why__content wow slideInRight">
+                    <div class="item-why__digit">04</div>
+                    <div class="item-why__wrap-content">
+                        <h4 class="item-why__title"><span class="orange">Атмосфера </span> та користь</h4>
+                        <div class="item-why__text">
+                            <p>З перших секунд гри ти відчуєш справжній дух <span class="blue">Укра</span><span class="yellow">їни</span>. 95% аудиторії розмовляє рідною мовою і дотримується високого рівня рольової гри. А завдяки нашим гравцям щомісяця ми <span class="orange"> відправляємо 50% </span> донату з відкритих кейсів і вже відправили понад <span class="orange">1.000грн</span> на допомогу ЗСУ.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-why__image-wrap wow slideInLeft">
+                    <div class="item-why__decor-block"></div>
+                    <div class="item-why__decor-block _2"></div>
+                    <div class="item-why__line-decor"></div>
+                    <picture>
+                        <source srcset="04.webp, 04@2x.webp 2x" type="image/webp">
+                        <img srcset="04@2x.png 2x" src="04_1.png" alt>
+                    </picture>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="how" id="how">
+    <div class="how__container">
+        <div class="how__title-wrap">
+            <h2 class="title how__title">
+                <span class="title__decor">Як завантажити гру? </span> Як завантажити гру?
+            </h2>
+        </div>
+        <div class="how__steps">
+            <div class="how__step">
+                <div class="how__step-digit">1</div>
+                <div class="how__step-text">
+                    <p>Натисніть на кнопку "Завантажити" після у вас завантажиться папка з назвою CARVAN GTA.</p>
+                </div>
+            </div>
+            <div class="how__step">
+                <div class="how__step-digit">2</div>
+                <div class="how__step-text">
+                    <p>Відкрийте її оберіть усе що там є та натисніть зверху на кнопку Вилучити і оберіть любий для вас зручний диск й створіть на ньому папку і нажимайте обрати.</p>
+                </div>
+            </div>
+            <div class="how__step">
+                <div class="how__step-digit">3</div>
+                <div class="how__step-text">
+                    <p>Після Вилучення гри, зайдіть у потрібну папку яку ви обрали й відкрийте її, й відкрийте файл CARAVAN GTA.exe від імені адміністратора</p>
+                </div>
+            </div>
+            <div class="how__step">
+                <div class="how__step-digit">4</div>
+                <div class="how
+
         <div class="
 <footer class="footer">
     <div class="footer__container">
