--- a/index.html
+++ b/index.html
@@ -286,7 +286,208 @@
             </div>
             <div class="how__step">
                 <div class="how__step-digit">4</div>
-                <div class="how
+                <div class="how__step-text">
+</div>
+<div class="how__step-text">
+<p>Після завершення встановлення оберіть сервер, на якому хочете грати і заходьте в гру! </p>
+</div>
+</div>
+</div>
+<div class="how__wrap">
+<div class="how__buttons">
+<div class="how__download">
+<a href="ПОСИЛАННЯ НА ГРУ" class="button-icon how__button download">
+ <div class="button-icon__row">
+<span class="button-icon__icon">
+<img src="upload.svg" alt>
+</span>
+<span class="button-icon__text">
+Завантажити гру </span>
+</div>
+</a>
+<div class="how__windows-mobile">
+<img src="windows.svg" alt>
+<span>Тільки з Windows</span>
+</div>
+</div>
+<a href="ТУТОРІАЛ ЯК ЗАВАНТАЖИТИ ГРУ" rel="nofollow" target="_blank" class="button-icon how__button">
+<div class="button-icon__row orange">
+<span class="button-icon__icon">
+<img src="play.svg" alt>
+</span>
+<span class="button-icon__text">
+Дивитись туторіал </span>
+</div>
+</a>
+<a data-popup="#popup" href class="button-icon how__button">
+<div class="button-icon__row">
+<span class="button-icon__icon">
+<img src="setting.svg" alt>
+</span>
+<span class="button-icon__text">
+Системні вимоги </span>
+</div>
+</a>
+</div>
+<a href="ТГ КАРАВАН ГТА" rel="nofollow" target="_blank" class="how__link">
+Виникли проблеми з інсталюванням? </a>
+</div>
+<div data-da=".how__container,650,2" class="how__image">
+<div data-prlx-mouse data-prlx-dxr data-prlx-cx="50" data-prlx-dxy class="how__button-decor one">
+<picture><source srcset="button.webp" type="image/webp"><img src="button.png" alt></picture>
+</div>
+<div data-prlx-mouse data-prlx-cy="50" class="how__button-decor two">
+<picture><source srcset="button.webp" type="image/webp"><img src="button.png" alt></picture>
+</div>
+<div class="how__decor-line"></div>
+<picture><source srcset="main-img.webp, main-img%402x.webp 2x" type="image/webp"><img srcset="main-img%402x.png 2x" src="main-img.png" alt></picture>
+</div>
+</div>
+</section>
+<div class="block-bg">
+<section class="news">
+<div class="news__gerb">
+<img src="gerb_1.svg" alt>
+</div>
+<div class="news__container">
+<div class="news__title-wrap">
+<h2 class="title news__title">
+<span class="title__decor">
+Новини гри </span>
+Новини гри </h2>
+</div>
+<div class="news__slider-wrap">
+<div class="news__slider swiper">
+<div class="news__wrapper swiper-wrapper">
+<div class="news__slide swiper-slide">
+<div class="news__card card-news">
+<a href="ІНСТА КАРАВАН ГТА" rel="nofollow" target="_blank" class="card-news__image-ibg">
+<picture><source srcset="01_1.webp" type="image/webp"><img src="01.jpg" alt></picture>
+</a>
+<div class="card-news__content">
+<a href="ІНСТА 2 раз" rel="nofollow" target="_blank" class="card-news__title">
+ДРУГИЙ СЕРВЕР!
+</a>
+<div class="card-news__text">
+<p>Новий сервер "CARAVAN GTA #2 server" вже доступний! Для вас - це ідеальний шанс почати все з 0 і стати номером один на новому сервері!</p>
+</div>
+<div class="card-news__bottom">
+<a href="ІНСТА 3 раз" rel="nofollow" target="_blank" class="card-news__button button button_blue">
+<div class="button__row">
+<span>Докладніше</span>
+</div>
+</a>
+<div class="card-news__date">
+14.06.2024
+</div>
+</div>
+</div>
+</div>
+ </div>
+<div class="news__slide swiper-slide">
+<div class="news__card card-news">
+<a href="https://youtu.be/wFt8ghuIm9A" rel="nofollow" target="_blank" class="card-news__image-ibg">
+<picture><source srcset="02_1.webp" type="image/webp"><img src="02.jpg" alt></picture>
+</a>
+<div class="card-news__content">
+<a href="https://youtu.be/wFt8ghuIm9A" rel="nofollow" target="_blank" class="card-news__title">
+ВІДКРИТТЯ ГРИ!
+</a>
+<div class="card-news__text">
+<p>Найбільше всього це очікують гравці CARAVAN GTA! Вже 14.06.2024 буде довгоочікуване відкриття гри!</p>
+</div>
+<div class="card-news__bottom">
+<a href="ЮТУБ" rel="nofollow" target="_blank" class="card-news__button button button_blue">
+<div class="button__row">
+<span>Докладніше</span>
+</div>
+</a>
+<div class="card-news__date">
+24.06.2024
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="news__slide swiper-slide">
+<div class="news__card card-news">
+<a href="ІНСТА 4 раз" rel="nofollow" target="_blank" class="card-news__image-ibg">
+<picture><source srcset="03.webp" type="image/webp"><img src="03.jpg" alt></picture>
+</a>
+<div class="card-news__content">
+<a href="ІНСТА 5 Раз" rel="nofollow" target="_blank" class="card-news__title">
+НОВЕ МЕНЮ ГРАВЦЯ!
+</a>
+<div class="card-news__text">
+<p>До гри буде додано нове меню гравця, яке повністю замінило вам безліч зайвих клавіш! Тепер все стало набагато комфортніше та приємніше!</p>
+</div>
+<div class="card-news__bottom">
+<a href="ІНСТА 6 РАЗ" rel="nofollow" target="_blank" class="card-news__button button button_blue">
+<div class="button__row">
+<span>Докладніше</span>
+</div>
+</a>
+<div class="card-news__date">
+02.07.2024
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="news__slide swiper-slide">
+<div class="news__card card-news">
+<a href="https://youtu.be/SYMkyXPL3fU" rel="nofollow" target="_blank" class="card-news__image-ibg">
+<picture><source srcset="04_1.webp" type="image/webp"><img src="04.jpg" alt></picture>
+</a>
+<div class="card-news__content">
+<a href="https://youtu.be/SYMkyXPL3fU" rel="nofollow" target="_blank" class="card-news__title">
+Таємне свято!
+</a>
+<div class="card-news__text">
+<p>Саме цієї дати один гравець з нашої гри у якого буде даної дати день народження отримає у грі величезні призи!</p>
+</div>
+<div class="card-news__bottom">
+<a href="Ютуб" rel="nofollow" target="_blank" class="card-news__button button button_blue">
+<div class="button__row">
+<span>Докладніше</span>
+</div>
+</a>
+<div class="card-news__date">
+15.07.2024
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="news__arrows">
+<button class="news__arrow prev">
+<img src="arrow-slider.svg" alt>
+</button>
+<button class="news__arrow next">
+<img src="arrow-slider.svg" alt>
+</button>
+</div>
+</div>
+<div class="news__pagination"></div>
+</div>
+</section>
+<section class="screen" id="screenshots">
+<div class="screen__container">
+<div data-gallery class="screen__grid">
+<div class="screen__title-wrap">
+<h2 class="title screen__title">
+<span class="title__decor">
+Скриншоти <br> гравців </span>
+Скриншоти <br> гравців </h2>
+</div>
+<a href="https://www.youtube.com/channel/UCAyONHpqibQDDrCxGiYc_hQ/featured" rel="nofollow" target="_blank" class="screen__image-ibg one">
+<div class="screen__icon">
+<img src="play.svg" alt>
+</div>
+<picture><source srcset="01_2.webp" type="image/webp"><img src="01_1
+
 
         <div class="
 <footer class="footer">
