--- a/index.html
+++ b/index.html
@@ -486,48 +486,585 @@
 <div class="screen__icon">
 <img src="play.svg" alt>
 </div>
-<picture><source srcset="01_2.webp" type="image/webp"><img src="01_1
-
-
-        <div class="
+<picture>
+    <source srcset="01_2.webp" type="image/webp">
+    <img src="01_1.png" alt>
+</picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/07.png" class="screen__image-ibg two">
+<div class="screen__icon">
+    <img src="eye.svg" alt>
+</div>
+<picture>
+    <source srcset="07.webp" type="image/webp">
+    <img src="07.png" alt>
+</picture>
+</a>
+<a href="https://www.youtube.com/channel/UCAyONHpqibQDDrCxGiYc_hQ/featured" rel="nofollow" target="_blank" class="screen__image-ibg three">
+<div class="screen__icon">
+    <img src="play.svg" alt>
+</div>
+<picture>
+    <source srcset="02_2.webp" type="image/webp">
+    <img src="02_1.png" alt>
+</picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/04.png" class="screen__image-ibg four">
+<div class="screen__icon">
+    <img src="eye.svg" alt>
+</div>
+<picture>
+    <source srcset="04_2.webp" type="image/webp">
+    <img src="04.png" alt>
+</picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/05.png" class="screen__image-ibg five">
+<div class="screen__icon">
+    <img src="eye.svg" alt>
+</div>
+<picture>
+    <source srcset="05_1.webp" type="image/webp">
+    <img src="05.png" alt>
+</picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/06.png" class="screen__image-ibg six">
+<div class="screen__icon">
+    <img src="eye.svg" alt>
+</div>
+<picture>
+    <source srcset="06.webp" type="image/webp">
+    <img src="06.png" alt>
+</picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/03.png" class="screen__image-ibg seven">
+<div class="screen__icon">
+    <img src="eye.svg" alt>
+</div>
+<picture>
+    <source srcset="03_2.webp" type="image/webp">
+    <img src="03_1.png" alt>
+</picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/08.png" class="screen__image-ibg eight">
+<div class="screen__icon">
+    <img src="eye.svg" alt>
+</div>
+<picture>
+    <source srcset="08.webp" type="image/webp">
+    <img src="08.png" alt>
+</picture>
+</a>
+</div>
+</div>
+</section>
+</div>
+</main>
+<div id="popup" aria-hidden="true" class="popup">
+<div class="popup__wrapper">
+<div class="popup__content">
+<button data-close type="button" class="popup__close"><img src="close.svg" alt></button>
+<div class="popup__title">
+Системні вимоги
+</div>
+<div data-simplebar class="popup__scroll">
+<div class="popup__item">
+<h4>
+Мінамальні вимоги
+</h4>
+<ul>
+<li>
+Операційна система: <span>Windows 7 SP1 x64 та вище</span>
+</li>
+<li>
+Процесор: <span>Intel Core 2 Duo 2.2 GHz, AMD Phenom 2.2 GHz</span>
+</li>
+<li>
+Відеокарта: <span>GTX 550 TI, ATI Radeon HD 4800</span>
+</li>
+<li>
+Оперативна пам'ять: <span>6ГБ DDR2</span>
+</li>
+<li>
+Роздільна здатність екрану: <span>1280х720</span>
+</li>
+<li>
+Звукова карта: <span>Сумісна з DirectX 9</span>
+</li>
+<li>
+Інтернет-з'єднання: <span>8 мбіт/сек</span>
+</li>
+<li>
+Вільне місце на накопичувачі: <span>20ГБ</span>
+</li>
+</ul>
+</div>
+<div class="popup__item">
+<h4>
+Рекомендовані вимоги
+</h4>
+<ul>
+<li>
+Операційна система: <span>Windows 11 x64</span>
+</li>
+<li>
+Процесор: <span>Intel Core i5 3GHz, AMD Ryzen 3GHz</span>
+</li>
+<li>
+Відеокарта: <span>GTX 550 TI, ATI Radeon HD 4800</span>
+</li>
+<li>
+Оперативна пам'ять: <span>16ГБ DDR3</span>
+</li>
+<li>
+Роздільна здатність екрану: <span>1920х1080</span>
+</li>
+<li>
+Звукова карта: <span>Сумісна з DirectX 9</span>
+</li>
+<li>
+Інтернет-з'єднання: <span>8 мбіт/сек</span>
+</li>
+<li>
+Вільне місце на накопичувачі: <span>20ГБ</span>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="popup-login" aria-hidden="true" class="popup popup_login">
+<div class="popup__wrapper">
+<div class="popup__content">
+<button data-close type="button" class="popup__close"><img src="close.svg" alt></button>
+<div class="popup__title">
+Підтвердження
+</div>
+<div class="popup__text">
+<p>
+Функція поки що недоступна
+</p>
+</div>
+</div>
+</div>
+</div>
 <footer class="footer">
-    <div class="footer__container">
-        <div class="footer__top">
-            <div class="footer__left">
-                <a href="/" class="footer__logo">
-                    <picture>
-                        <source srcset="images/logo2.webp" type="image/webp">
-                        <img src="images/logo2.png" alt>
-                    </picture>
-                </a>
-                <div class="footer__text">
-                    <p>Караван ГТА - це український ролеплей проєкт, створений українськими розробниками на платформі MTA.
-                    Гра, в якій є графіка та можливості GTA 5. Це український РП проєкт, створений за мотивами
-                    кримінальної України.</p>
-                </div>
-            </div>
-            <div class="footer__right">
-                <div class="footer__social">
-                    <a href="https://www.facebook.com" target="_blank"><img src="fonts/facebook.svg" alt="Facebook"></a>
-                    <a href="https://www.instagram.com" target="_blank"><img src="fonts/instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.twitter.com" target="_blank"><img src="fonts/twitter.svg" alt="Twitter"></a>
-                    <a href="https://www.youtube.com" target="_blank"><img src="fonts/youtube.svg" alt="YouTube"></a>
-                </div>
-                <div class="footer__contacts">
-                    <p><a href="mailto:support@caravangta.com">support@caravangta.com</a></p>
-                    <p>Телефон: +380 123 456 789</p>
-                </div>
-            </div>
-        </div>
-        <div class="footer__bottom">
-            <p>&copy; 2024 Караван ГТА. Всі права захищені. Створено discord: mr_seater </p>
-            <nav class="footer__nav">
-                <a href="/privacy-policy" class="footer__link">Політика конфіденційності</a>
-                <a href="/terms-of-service" class="footer__link">Умови використання</a>
-            </nav>
-        </div>
-    </div>
+<div class="footer__container">
+<div class="footer__top">
+<div class="footer__left">
+<a href="/" class="footer__logo">
+<picture>
+    <source srcset="logo2.webp" type="image/webp">
+    <img src="logo2.png" alt>
+</picture>
+</a>
+<div class="footer__text">
+<p>Караван ГТА - це український ролеплей проєкт, створений українськими розробниками на платформі MTA.
+Гра, в якій є графіка та можливості GTA 5. Це український РП проєкт, створений за мотивами
+кримінальної України.</p>
+</div>
+</div>
+<div class="footer__buttons">
+<a href="/about" class="footer__button button button_blue">
+<div class="button__row">
+<span> Про нас</span>
+</div>
+</a>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScgoFSNBTYqTYOhaaTlDp31PlBeJ4bStYH1qRVQsFvI1CKPbw/alreadyresponded" rel="nofollow" target="_blank" class="footer__button button button_blue">
+<div class="button__row">
+<span> Блогерам</span>
+</div>
+</a>
+<a href="/vacancy" class="footer__button button button_blue">
+<div class="button__row">
+<span> Вакансії</span>
+</div>
+</a>
+<a href="ТЕХ ПІДТРИМКА КАРАВАН ГТА" rel="nofollow" target="_blank" class="footer__button button button_blue">
+<div class="button__row">
+<span>Тех. підтримка</span>
+</div>
+</a>
+</div>
+</div>
+<div class="footer__navigation">
+<div class="footer__column">
+<div class="footer__title">
+Інформація </div>
+<ul class="footer__list">
+<li>
+<a href="/terms">
+Угода користувача </a>
+</li>
+<li>
+<a href="/offert">
+Договір оферти </a>
+</li>
+<li>
+<a href="/privacy">
+Політика персональних даних </a>
+</li>
+</ul>
+</div>
+<div class="footer__column">
+<div class="footer__title">
+Навігація </div>
+<ul class="footer__list">
+<li>
+<a href="/#how">
+Як почати грати? </a>
+</li>
+<li>
+<a href="ФОРУМ КАРАВАН ГТА" target="_blank">
+Ігровий форум </a>
+</li>
+<li>
+<a href="/donate/">
+Ігровий магазин </a>
+</li>
+<li>
+<a href="/#screenshots">
+Скриншоти гравців </a>
+</li>
+</ul>
+</div>
+<div class="footer__column">
+<div class="footer__title">
+СОЦІАЛЬНІ МЕРЕЖІ </div>
+<ul class="footer__list-socials">
+<li>
+<a href="ІНСТА КАРАВАН ГТА" rel="nofollow" target="_blank">
+<span class="footer__soc-icon">
+<picture><source srcset="01_2.webp" type="image/webp"><img src="01_1.png" alt></picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/07.png" class="screen__image-ibg two">
+<div class="screen__icon">
+<img src="eye.svg" alt>
+</div>
+<picture><source srcset="07.webp" type="image/webp"><img src="07.png" alt></picture>
+</a>
+<a href="https://www.youtube.com/channel/UCAyONHpqibQDDrCxGiYc_hQ/featured" rel="nofollow" target="_blank" class="screen__image-ibg three">
+<div class="screen__icon">
+<img src="play.svg" alt>
+</div>
+<picture><source srcset="02_2.webp" type="image/webp"><img src="02_1.png" alt></picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/04.png" class="screen__image-ibg four">
+<div class="screen__icon">
+<img src="eye.svg" alt>
+</div>
+<picture><source srcset="04_2.webp" type="image/webp"><img src="04.png" alt></picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/05.png" class="screen__image-ibg five">
+<div class="screen__icon">
+<img src="eye.svg" alt>
+</div>
+<picture><source srcset="05_1.webp" type="image/webp"><img src="05.png" alt></picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/06.png" class="screen__image-ibg six">
+<div class="screen__icon">
+<img src="eye.svg" alt>
+</div>
+<picture><source srcset="06.webp" type="image/webp"><img src="06.png" alt></picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/03.png" class="screen__image-ibg seven">
+<div class="screen__icon">
+<img src="eye.svg" alt>
+</div>
+<picture><source srcset="03_2.webp" type="image/webp"><img src="03_1.png" alt></picture>
+</a>
+<a data-gallery-item href="/assets/img/screen/08.png" class="screen__image-ibg eight">
+<div class="screen__icon">
+<img src="eye.svg" alt>
+</div>
+<picture><source srcset="08.webp" type="image/webp"><img src="08.png" alt></picture>
+</a>
+</div>
+</div>
+</section>
+</div>
+</main>
+<div id="popup" aria-hidden="true" class="popup">
+<div class="popup__wrapper">
+<div class="popup__content">
+<button data-close type="button" class="popup__close"><img src="close.svg" alt></button>
+<div class="popup__title">
+Системні вимоги
+</div>
+<div data-simplebar class="popup__scroll">
+<div class="popup__item">
+<h4>
+Мінамальні вимоги
+</h4>
+<ul>
+<li>
+Операційна система: <span>Windows 7 SP1 x64 та вище</span>
+</li>
+<li>
+Процесор: <span>Intel Core 2 Duo 2.2 GHz, AMD Phenom 2.2 GHz</span>
+</li>
+<li>
+Відеокарта: <span>GTX 550 TI, ATI Radeon HD 4800</span>
+</li>
+<li>
+Оперативна пам'ять: <span>6ГБ DDR2</span>
+</li>
+<li>
+Роздільна здатність екрану: <span>1280х720</span>
+</li>
+<li>
+Звукова карта: <span>Сумісна з DirectX 9</span>
+</li>
+<li>
+Інтернет-з'єднання: <span>8 мбіт/сек</span>
+</li>
+<li>
+Вільне місце на накопичувачі: <span>20ГБ</span>
+</li>
+</ul>
+</div>
+<div class="popup__item">
+<h4>
+Рекомендовані вимоги
+</h4>
+<ul>
+<li>
+Операційна система: <span>Windows 11 x64</span>
+</li>
+<li>
+Процесор: <span>Intel Core i5 3GHz, AMD Ryzen 3GHz</span>
+</li>
+<li>
+Відеокарта: <span>GTX 550 TI, ATI Radeon HD 4800</span>
+</li>
+<li>
+Оперативна пам'ять: <span>16ГБ DDR3</span>
+</li>
+<li>
+Роздільна здатність екрану: <span>1920х1080</span>
+</li>
+<li>
+Звукова карта: <span>Сумісна з DirectX 9</span>
+</li>
+<li>
+Інтернет-з'єднання: <span>8 мбіт/сек</span>
+</li>
+<li>
+Вільне місце на накопичувачі: <span>20ГБ</span>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="popup-login" aria-hidden="true" class="popup popup_login">
+<div class="popup__wrapper">
+<div class="popup__content">
+<button data-close type="button" class="popup__close"><img src="close.svg" alt></button>
+<div class="popup__title">
+Підтвердження
+</div>
+<div class="popup__text">
+<p>
+Функція поки що недоступна
+</p>
+</div>
+</div>
+</div>
+</div>
+<footer class="footer">
+<div class="footer__container">
+<div class="footer__top">
+<div class="footer__left">
+<a href="/" class="footer__logo">
+<picture><source srcset="logo2.webp" type="image/webp"><img src="logo2.png" alt></picture>
+</a>
+<div class="footer__text">
+<p>Караван ГТА - це український ролеплей проєкт, створений українськими розробниками на платформі MTA.
+Гра, в якій є графіка та можливості GTA 5. Це український РП проєкт, створений за мотивами
+кримінальної України.</p>
+</div>
+</div>
+<div class="footer__buttons">
+<a href="/about" class="footer__button button button_blue">
+<div class="button__row">
+<span> Про нас</span>
+</div>
+</a>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScgoFSNBTYqTYOhaaTlDp31PlBeJ4bStYH1qRVQsFvI1CKPbw/alreadyresponded" rel="nofollow" target="_blank" class="footer__button button button_blue">
+<div class="button__row">
+<span> Блогерам</span>
+</div>
+</a>
+<a href="/vacancy" class="footer__button button button_blue">
+<div class="button__row">
+<span> Вакансії</span>
+</div>
+</a>
+<a href="ТЕХ ПІДТРИМКА КАРАВАН ГТА" rel="nofollow" target="_blank" class="footer__button button button_blue">
+<div class="button__row">
+<span>Тех. підтримка</span>
+</div>
+</a>
+</div>
+</div>
+<div class="footer__navigation">
+<div class="footer__column">
+<div class="footer__title">
+Інформація </div>
+<ul class="footer__list">
+<li>
+<a href="/terms">
+Угода користувача </a>
+</li>
+<li>
+<a href="/offert">
+Договір оферти </a>
+</li>
+<li>
+<a href="/privacy">
+Політика персональних даних </a>
+</li>
+</ul>
+</div>
+<div class="footer__column">
+<div class="footer__title">
+Навігація </div>
+<ul class="footer__list">
+<li>
+<a href="/#how">
+Як почати грати? </a>
+</li>
+<li>
+<a href="ФОРУМ КАРАВАН ГТА" target="_blank">
+Ігровий форум </a>
+</li>
+<li>
+<a href="/donate/">
+Ігровий магазин </a>
+</li>
+<li>
+<a href="/#screenshots">
+Скриншоти гравців </a>
+</li>
+</ul>
+</div>
+<div class="footer__column">
+<div class="footer__title">
+СОЦІАЛЬНІ МЕРЕЖІ </div>
+<ul class="footer__list-socials">
+<li>
+<a href="ІНСТА КАРАВАН ГТА" rel="nofollow" target="_blank">
+<span class="footer__soc-icon">
+<img src="foo-inst.svg" alt>
+</span>
+<span class="footer__soc-text">
+Instagram
+</span>
+</a>
+</li>
+<li>
+<a href="https://www.youtube.com/channel/UCAyONHpqibQDDrCxGiYc_hQ/featured" rel="nofollow" target="_blank">
+<span class="footer__soc-icon">
+<img src="foo-you.svg" alt>
+</span>
+<span class="footer__soc-text">
+YouTube
+</span>
+</a>
+</li>
+<li>
+<a href="ТЕЛЕГРАМ КАРАВАН ГТА" rel="nofollow" target="_blank">
+<span class="footer__soc-icon">
+<img src="foo-tel.svg" alt>
+</span>
+<span class="footer__soc-text">
+Telegram
+</span>
+</a>
+</li>
+<li>
+<a href="ТІКТОК КАРАВАН ГТА" rel="nofollow" target="_blank">
+<span class="footer__soc-icon">
+ <img src="foo-tik.svg" alt>
+</span>
+<span class="footer__soc-text">
+TikTok
+</span>
+</a>
+</li>
+<li>
+<a href="https://discord.gg/tvF6CWyRrV" rel="nofollow" target="_blank">
+<span class="footer__soc-icon">
+<img src="foo-dis.svg" alt>
+</span>
+<span class="footer__soc-text">
+Discord
+</span>
+</a>
+</li>
+</ul>
+</div>
+</div>
+<div class="footer__bottom">
+<span class="footer__support">ВСІ ПРАВА ЗАХИЩЕНО.</span>
+<div class="footer__copy">
+<p>© 2024 CARAVAN GTA</p>
+<p>Створено: <br> discord: mr_seater</p>
+</div>
+<div class="footer__payments">
+<span class="footer__payment">
+<img src="01.svg" alt>
+</span>
+<span class="footer__payment">
+<img src="02.svg" alt>
+</span>
+<span class="footer__payment">
+<img src="03.svg" alt>
+</span>
+<span class="footer__payment">
+<img src="04.svg" alt>
+</span>
+<span class="footer__payment">
+<img src="05.svg" alt>
+</span>
+</div>
+</div>
+</div>
 </footer>
-<script src="scripts/main.js"></script>
-</body>
-</html>
+</div>
+<script src="js/app.min.js"></script>
+<script>
+		function scrollIntoView(element) {
+			document.getElementById(element).scrollIntoView({
+				behavior: 'smooth'
+			});
+		}
+
+		function selectLanguage() {
+			var language = document.getElementById("select_language").value;
+			if(language == 2)
+				document.cookie = 'language=eng; expires=Sun, 1 Jan 2026 00:00:00 UTC; path=/';
+			else 
+				document.cookie = 'language=ukr; expires=Sun, 1 Jan 2026 00:00:00 UTC; path=/';
+
+			window.location.href = "https://ukraine-gta.com.ua/";
+			window.location.reload();
+		}
+	</script>
+<div id="popup-login" aria-hidden="true" class="popup popup_login">
+<div class="popup__wrapper">
+<div class="popup__content">
+<button data-close type="button" class="popup__close"><img src="close.svg" alt></button>
+<div class="popup__title">
+Підтвердження
+</div>
+<div class="popup__text">
+<p>
+Функція поки що недоступна
+</p>
+</div>
+</div>
+</div>
+</div>
