--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <span class="button__text">Почати гру</span>
                             </span>
                         </a>
-                        <a href="https://youtu.be/SdsvPmB5B3I" rel="nofollow" target="_blank" class="button-icon main-block__button">
+                        <a href="НЕМАЄ" rel="nofollow" target="_blank" class="button-icon main-block__button">
                             <div class="button-icon__row">
                                 <span class="button-icon__icon">
                                     <img src="play.svg" alt>
