--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <nav class="menu__body">
                 <ul class="menu__list">
                     <li class="menu__item"><a href="/#how" onclick="$('html').removeClass('menu-open');$('html').removeClass('lock')" class="menu__link">Як почати грати?</a></li>
-                    <li class="menu__item"><a href="https://forum.ukraine-gta.com.ua" class="menu__link">Форум</a></li>
+                    <li class="menu__item"><a href="https://caravan-gta.vkweb.su" class="menu__link">Форум</a></li>
                     <li class="menu__item"><a href="/donate" class=" menu__link undefined">Ігровий магазин</a></li>
                 </ul>
                 <ul class="menu__socials socials">
