--- a/index.html
+++ b/index.html
@@ -44,27 +44,27 @@
                 </ul>
                 <ul class="menu__socials socials">
                     <li>
-                        <a href="https://discord.gg/bq74nAwatX" rel="nofollow" target="_blank">
+                        <a href="https://discord.gg/tvF6CWyRrV" rel="nofollow" target="_blank">
                             <img src="discord.svg" alt="Discord">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/ukraine_gta/?igshid=YmMyMTA2M2Y%3D" rel="nofollow" target="_blank">
+                        <a href="ІНСТАГРАМ" rel="nofollow" target="_blank">
                             <img src="instagram.svg" alt="Instagram">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/channel/UCAyONHpqibQDDrCxGiYc_hQ/featured" rel="nofollow" target="_blank">
+                        <a href="https://www.youtube.com" rel="nofollow" target="_blank">
                             <img src="youtube.svg" alt="YouTube">
                         </a>
                     </li>
                     <li>
-                        <a href="https://t.me/ukraine_gta" rel="nofollow" target="_blank">
+                        <a href="https://t.me" rel="nofollow" target="_blank">
                             <img src="telegram.svg" alt="Telegram">
                         </a>
                     </li>
                     <li>
-                        <a href="https://vm.tiktok.com/ZMLp3Mcys/" rel="nofollow" target="_blank">
+                        <a href="https://vm.tiktok.com" rel="nofollow" target="_blank">
                             <img src="tiktok.svg" alt="TikTok">
                         </a>
                     </li>
