--- a/index.html
+++ b/index.html
@@ -353,82 +353,6 @@
 <div class="news__title-wrap">
 <h2 class="title news__title">
 <span class="title__decor">
-Новини гри </span>
-Новини гри </h2>
-</div>
-<div class="news__slider-wrap">
-<div class="news__slider swiper">
-<div class="news__wrapper swiper-wrapper">
-<div class="news__slide swiper-slide">
-<div class="news__card card-news">
-<a href="ІНСТА КАРАВАН ГТА" rel="nofollow" target="_blank" class="card-news__image-ibg">
-<picture><source srcset="01_1.webp" type="image/webp"><img src="01.jpg" alt></picture>
-</a>
-<div class="card-news__content">
-<a href="ІНСТА 2 раз" rel="nofollow" target="_blank" class="card-news__title">
-ДРУГИЙ СЕРВЕР!
-</a>
-<div class="card-news__text">
-<p>Новий сервер "CARAVAN GTA #2 server" вже доступний! Для вас - це ідеальний шанс почати все з 0 і стати номером один на новому сервері!</p>
-</div>
-<div class="card-news__bottom">
-<a href="ІНСТА 3 раз" rel="nofollow" target="_blank" class="card-news__button button button_blue">
-<div class="button__row">
-<span>Докладніше</span>
-</div>
-</a>
-<div class="card-news__date">
-14.06.2024
-</div>
-</div>
-</div>
-</div>
- </div>
-<div class="news__slide swiper-slide">
-<div class="news__card card-news">
-<a href="https://youtu.be/wFt8ghuIm9A" rel="nofollow" target="_blank" class="card-news__image-ibg">
-<picture><source srcset="02_1.webp" type="image/webp"><img src="02.jpg" alt></picture>
-</a>
-<div class="card-news__content">
-<a href="https://youtu.be/wFt8ghuIm9A" rel="nofollow" target="_blank" class="card-news__title">
-ВІДКРИТТЯ ГРИ!
-</a>
-<div class="card-news__text">
-<p>Найбільше всього це очікують гравці CARAVAN GTA! Вже 14.06.2024 буде довгоочікуване відкриття гри!</p>
-</div>
-<div class="card-news__bottom">
-<a href="ЮТУБ" rel="nofollow" target="_blank" class="card-news__button button button_blue">
-<div class="button__row">
-<span>Докладніше</span>
-</div>
-</a>
-<div class="card-news__date">
-24.06.2024
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="news__slide swiper-slide">
-<div class="news__card card-news">
-<a href="ІНСТА 4 раз" rel="nofollow" target="_blank" class="card-news__image-ibg">
-<picture><source srcset="03.webp" type="image/webp"><img src="03.jpg" alt></picture>
-</a>
-<div class="card-news__content">
-<a href="https://youtu.be/SYMkyXPL3fU" rel="nofollow" target="_blank" class="card-news__title">
-Таємне свято!
-</a>
-<div class="card-news__text">
-<p>Саме цієї дати один гравець з нашої гри у якого буде даної дати день народження отримає у грі величезні призи!</p>
-</div>
-<div class="card-news__bottom">
-<a href="Ютуб" rel="nofollow" target="_blank" class="card-news__button button button_blue">
-<div class="button__row">
-<span>Докладніше</span>
-</div>
-</a>
-<div class="card-news__date">
-15.07.2024
 </div>
 </div>
 </div>
@@ -636,7 +560,7 @@
 <div class="footer__text">
 <p>Караван ГТА - це український ролеплей проєкт, створений українськими розробниками на платформі MTA.
 Гра, в якій є графіка та можливості GTA 5. Це український РП проєкт, створений за мотивами
-кримінальної України.</p>
+кримінальної України. СТВОРЕНО САЙТ DISCORD: Mr. Seater</p>
 </div>
 </div>
 <div class="footer__buttons">
