--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 <span> Про нас</span>
 </div>
 </a>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLScgoFSNBTYqTYOhaaTlDp31PlBeJ4bStYH1qRVQsFvI1CKPbw/alreadyresponded" rel="nofollow" target="_blank" class="footer__button button button_blue">
+<a href="https://forms.gle/vViUgkqQjhjCdwte6" rel="nofollow" target="_blank" class="footer__button button button_blue">
 <div class="button__row">
 <span> Блогерам</span>
 </div>
